<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:textAlignment="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:adjustViewBounds="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/logo" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.13"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:padding="50dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/social_text"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15sp" />
		
        
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:src="@drawable/social_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:divider="#b7b7b7"
            android:orientation="vertical"
            android:showDividers="end" >
            
            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="14dp"
                android:gravity="center_horizontal"
                android:text="@string/text_login"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/registro"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="E-mail"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="7dp"
                android:textColor="#a1a1a1"
                android:textColorHint="#a1a1a1" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/editText2"
                android:layout_alignLeft="@+id/editText2"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="Contraseña"
                android:paddingBottom="7dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="7dp"
                android:inputType="textPassword"
                android:textColor="#a1a1a1"
                android:textColorHint="#a1a1a1"/>

            <Button
                android:id="@+id/registro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="doLoginButton_click"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Ingresar"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:layout_marginTop="20dp"
		    android:gravity="center_horizontal"
		    android:text="@string/text_register"
		    android:textAlignment="center"
		    android:textColor="#FFFFFF"
		    android:textSize="15sp" />

            <Button
                android:id="@+id/registrarButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Registrarse" />

        </LinearLayout>
        
    </LinearLayout>
        </ScrollView>

</LinearLayout>